<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:context=".FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/birthday" />

    <DatePicker
        android:id="@+id/datepicker_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/phone_number_hint"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/city" />

    <EditText
        android:id="@+id/edittext_city"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/city_hint"
        android:inputType="textLongMessage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/first_deposit" />

    <EditText
        android:id="@+id/edittext_deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_deposit_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />


</LinearLayout>