<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        tools:context="com.example.checkIt.UserDetailActivity">

        <TextView
            android:id="@+id/textview_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits"
            tools:text="Fannyah Dita Cahya" />

        <TextView
            android:id="@+id/textview_detail_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="21 Years Old" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_detail_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autoLink="phone"
            android:textSize="16sp"
            tools:text="081213714342" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/birthday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_detail_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            tools:text="1998-10-31" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/city"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_detail_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            tools:text="Bogor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/first_deposit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_detail_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            tools:text="1000000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#73BB85"
            android:padding="10dp">

            <TextView
                android:id="@+id/textview_detail_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Congratulation! You got 10% additional balance" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/balance"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_detail_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            tools:text="1000000" />

    </LinearLayout>
</ScrollView>